local-sample/new-keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: my-keycloak-operator
  name: my-keycloak-operator
spec:
  finalizers:
  - kubernetes
