local-sample/new-keycloak/kc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
  #- port: 443
  #  protocol: TCP
  #  targetPort: 443
  selector:
    app: keycloak
  sessionAffinity: None
  type: ClusterIP
