local-sample/new-keycloak/kc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  generation: 1
  labels:
    app: keycloak
  name: keycloak-ingress
spec:
  tls:
  - hosts:
      - keycloak
    secretName: local-dev-tls-secret
  ingressClassName: nginx
  #defaultBackend:
  #  service:
  #    name: localhost
  #    port:
  #      number: 8443
  rules:
  - host: keycloak
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8443
        path: /auth
        pathType: ImplementationSpecific
